# lab2

./: CMakeLists.txt  main.cpp  Отчет_931921_Укубаев_С.Б.odt
include/: file_observer.h  file_subject.h  i_observer.h  subject.h
src/: file_observer.cpp  file_subject.cpp  subject.cpp
